--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,13 +15,21 @@
                   <li class="col">
                     <a href="/products/<%= product.id %>"><div class="thumbnail__figure" style="background-image:url(<%= product.image_url %>)"></div></a>
                     <div class="thumbnail__caption">
-                      <h3 class="text-xsmall text-overflow" title="タイトル">
-                        タイトル
+<!-- タイトルを"product.title"からもってくる。 -->
+                      <h3 class="text-xsmall text-overflow" title="<%= product.title %>">
+                        <%= product.title %>
                       </h3>
                       <p class="text-small">
+<!-- present?メソッドは、配列の中身が存在すればtrue、存在しなければfalse -->
+                        <% if product.reviews.present? %>   <!-- レビューがない場合のための"if文" -->
                         <span class="rating-star">
-                          <i class="star-actived rate-[ここに評価を表示]0"></i>
+                          <i class="star-actived rate-<%= product.review_average %>0"></i>
                         </span>
+                        <% else %>
+                        <span class="rating-star">
+                          <i class="star-actived rate-0"></i>
+                        </span>
+                        <% end %>
                       </p>
                     </div>
                   </li>
@@ -31,3 +39,5 @@
           </article>
         </div>
         <div id="yjSub">
+
+
